// Copyright 2025 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package api.v2;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "log/v2/log.proto";
import "metric/v1/metric.proto";

message GetLogsRequest {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message GetLogsResponse {
  repeated log.v2.Log logs = 1;
}

message PutLogsRequest {
  repeated log.v2.Log logs = 1;
}

message GetMetricsRequest {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message GetMetricsResponse {
  metric.v1.Metric metrics = 1;
}

service ObservabilityService {
  rpc GetLogs (GetLogsRequest) returns (GetLogsResponse);
  rpc PutLogs (PutLogsRequest) returns (google.protobuf.Empty);
  rpc GetMetrics (GetMetricsRequest) returns (GetMetricsResponse);
}
